--- a/RD3/Views/MainView.xaml
+++ b/RD3/Views/MainView.xaml
@@ -158,7 +158,8 @@
                                 FontSize="16"
                                 Foreground="{DynamicResource DefaultBrush}"
                                 Header="{ex:Language Key='DOE'}"
-                                Tag="DOE">
+                                Tag="DOE"
+                                Visibility="Collapsed">
                                 <hc:SideMenuItem.Icon>
                                     <Image
                                         Width="24"
