--- a/RD3/Views/EditSampleView.xaml
+++ b/RD3/Views/EditSampleView.xaml
@@ -38,13 +38,10 @@
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <Setter Property="Opacity" Value="1" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
     </prism:Dialog.WindowStyle>
-    <Border
-        Background="{StaticResource BackGroundBrush}"
-        BorderBrush="{DynamicResource BorderBrush}"
-        BorderThickness="0"
-        CornerRadius="4">
+    <Border Style="{StaticResource BorderCard}">
         <Grid Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
