--- a/RD3/Views/EditUserView.xaml
+++ b/RD3/Views/EditUserView.xaml
@@ -31,6 +31,7 @@
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <Setter Property="Opacity" Value="1" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
     </prism:Dialog.WindowStyle>
     <UserControl.Resources>
@@ -43,7 +44,7 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
     </UserControl.Resources>
-    <Border Style="{StaticResource BorderCard}">
+    <Border Style="{StaticResource BorderForm}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
