--- a/RD3/Views/FeedView.xaml
+++ b/RD3/Views/FeedView.xaml
@@ -58,7 +58,7 @@
             <Setter Property="AllowsTransparency" Value="True" />
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <Setter Property="Background" Value="{StaticResource BackGroundBrush}" />
+            <Setter Property="Background" Value="Transparent" />
             <Setter Property="Opacity" Value="1" />
             <Setter Property="AllowDrop" Value="True" />
         </Style>
