--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -29,9 +29,10 @@
             <Setter Property="WindowStyle" Value="None" />
             <Setter Property="WindowState" Value="{Binding FormState, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             <Setter Property="Opacity" Value="1" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
     </prism:Dialog.WindowStyle>
-    <Border Style="{StaticResource BorderCard}">
+    <Border Style="{StaticResource BorderForm}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40" />
